@@ -240,6 +240,61 @@ object associated with the given name:
 
 =back
 
+=head1 SUBCLASSING Apache::Request
+
+The Apache::Request class cannot be subclassed directly because its constructor
+method does not bless new objects into the invocant class. Instead, it always
+blesses them into the Apache::Request class itself.
+
+However, there are two main ways around this.
+
+One way is to have a constructor method in your subclass that invokes the
+superclass constructor method and then re-blesses the new object into itself
+before returning it:
+
+	package MySubClass;
+	use Apache::Request;
+	our @ISA = qw(Apache::Request);
+	sub new {
+		my($class, @args) = @_;
+		return bless $class->SUPER::new(@args), $class;
+	}
+
+The other way is to aggregate and delegate: store an Apache::Request object in
+each instance of your subclass, and delegate any Apache::Request methods that
+you are not overriding to it:
+
+	package MySubClass;
+	use Apache::Request;
+	sub new {
+		my($class, @args) = @_;
+		return bless { r => Apache::Request->new(@args) }, $class;
+	}
+	sub AUTOLOAD {
+		my $proto = shift;
+		our $AUTOLOAD;
+		my $name = $AUTOLOAD;
+		$name =~ s/^.*:://;
+		return $proto->$name(@_);
+	}
+
+In fact, the aggregate/delegate solution is made easier by some magic in the
+Apache::Request class. If the instances of your subclass are hash references
+then you can actually inherit from Apache::Request as long as the
+Apache::Request object is stored in an attribute called "r" or "_r". (The
+Apache::Request class effectively does the delegation for you automagically, as
+long as it knows where to find the Apache::Request object to delegate to.)
+
+Thus, the second example above can be simplified as:
+
+	package MySubClass;
+	use Apache::Request;
+	our @ISA = qw(Apache::Request);
+	sub new {
+		my($class, @args) = @_;
+		return bless { r => Apache::Request->new(@args) }, $class;
+	}
+
 =head1 Apache::Upload METHODS
 
 =over 4
